Added contact info

--- a/mf-runtime.cabal
+++ b/mf-runtime.cabal
@@ -1,18 +1,18 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.2.
+-- This file has been generated from package.yaml by hpack version 0.34.4.
 --
 -- see: https://github.com/sol/hpack
 
 name:           mf-runtime
 version:        0.1.0.0
-description:    Please see the README on GitHub at <https://github.com/githubuser/mf-runtime#readme>
-homepage:       https://github.com/githubuser/mf-runtime#readme
-bug-reports:    https://github.com/githubuser/mf-runtime/issues
-author:         Author name here
-maintainer:     example@example.com
-copyright:      2022 Author name here
-license:        BSD3
+description:    Please see the README on GitHub at <https://github.com/daniel-raffler/mf-runtime#readme>
+homepage:       https://github.com/github.com/daniel-raffler#readme
+bug-reports:    https://github.com/github.com/daniel-raffler/issues
+author:         Daniel Raffler
+maintainer:     daniel-raffler@gmx.de
+copyright:      2022 Daniel Raffler
+license:        OtherLicense
 license-file:   LICENSE
 build-type:     Simple
 extra-source-files:
@@ -21,7 +21,8 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/mf-runtime
+  location: https://github.com/github.com/daniel-raffler
+  subdir: mf-runtime
 
 library
   exposed-modules:
