--- a/package.yaml
+++ b/package.yaml
@@ -1,10 +1,10 @@
 name:                mf-runtime
 version:             0.1.0.0
-github:              "githubuser/mf-runtime"
-license:             BSD3
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2022 Author name here"
+github:              "github.com/daniel-raffler/mf-runtime"
+license:             OtherLicense
+author:              "Daniel Raffler"
+maintainer:          "daniel-raffler@gmx.de"
+copyright:           "2022 Daniel Raffler"
 
 extra-source-files:
 - README.md
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/mf-runtime#readme>
+description:         Please see the README on GitHub at <https://github.com/daniel-raffler/mf-runtime#readme>
 
 dependencies:
 - base >= 4.7 && < 5
