Updated for mf-libary, code can now be read from an exe file

--- a/mf-runtime.cabal
+++ b/mf-runtime.cabal
@@ -33,4 +33,7 @@ executable mf-runtime-exe
   build-depends:
       base >=4.7 && <5
     , containers
+    , mf-library
+    , optparse-applicative
+    , text
   default-language: Haskell2010
