--- a/stack.yaml
+++ b/stack.yaml
@@ -40,6 +40,9 @@ packages:
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
 # extra-deps: []
+extra-deps:
+  - git: https://github.com/daniel-raffler/mf-library.git
+    commit: 15f2aa0e977d91e291dc1d3f52f967b7f0d5ee8b
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
