--- a/package.yaml
+++ b/package.yaml
@@ -21,14 +21,17 @@ extra-source-files:
 description: Please see the README on GitHub at <https://github.com/daniel-raffler/mf-runtime#readme>
 
 dependencies:
-- base >= 4.7 && < 5
-- containers
+  - base >= 4.7 && < 5
+  - containers
+  - optparse-applicative
+  - mf-library
+  - text
 
 executables:
   mf-runtime-exe:
-    main:                Main.hs
-    source-dirs:         app
+    main: Main.hs
+    source-dirs: app
     ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
+      - -threaded
+      - -rtsopts
+      - -with-rtsopts=-N
